I think i fixed it.
